--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 		<title>Connective Release, LLC</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- turn off caching, useful for debuging -->
+                <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+                <META HTTP-EQUIV="Expires" CONTENT="-1">
+
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
